...
                android:layout_marginBottom="75dp"
                android:backgroundTint="#1A2561"
                android:text="Chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

            <Spinner
                android:id="@+id/spinner_family_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="90dp"
                app:layout_constraintBottom_toTopOf="@+id/pieChart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_show_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="307dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="403dp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="468dp"
                android:layout_marginEnd="73dp"
                android:backgroundTint="#1A2561"
                android:text="Submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText_amount"
                app:layout_constraintTop_toBottomOf="@+id/btn_show_popup" />

            <EditText
                android:id="@+id/editText_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="220dp"
                android:hint="Amount"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spinner_categories" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
...
